# circuitpython-pcf85063a

./: LICENSE  README.rst  README.rst.license  pcf85063a.py  pyproject.toml
docs/: api.rst  examples.rst  index.rst
examples/: pcf85063a_simpletest.py
