# SPDX-FileCopyrightText: 2023 Bernhard Bablok
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-pcf85063a"
description = "CircuitPython library for PCF85063A real time clock."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Bernhard Bablok", email = "bablokb@gmx.de"}
]
urls = {Homepage = "https://github.com/bablokb/circuitpython-pcf85063a"}
keywords = [
    "pcf85063a",
    "real",
    "time",
    "clock",
    "rtc",
    "breakout",
    "hardware",
    "micropython",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["pcf85063a"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
